[project]
name = "machine_learning_script_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "transformers>=4.57.1",
]

[project.optional-dependencies]
rocm = [
  "torch @ https://repo.radeon.com/rocm/windows/rocm-rel-6.4.4/torch-2.8.0a0%2Bgitfc14c65-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
  "torchvision @ https://repo.radeon.com/rocm/windows/rocm-rel-6.4.4/torchvision-0.24.0a0%2Bc85f008-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
]
